// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properly calculates output arrays Adds 1`] = `
Array [
  "lorem",
  "ipsum",
  "dolor",
  "sit",
]
`;

exports[`Properly calculates output arrays Removes 1`] = `
Array [
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays Toggles 1`] = `
Array [
  "ipsum",
  "dolor",
]
`;

exports[`Properly calculates output arrays Toggles 2`] = `
Array [
  "lorem",
  "ipsum",
  "dolor",
  "sit",
]
`;
